manuscripts/elife-71227/v2/manuscript_v1.md
# Coordination of two opposite flagella allows high-speed swimming and active turning of individual zoospores

## Authors

- Quang D Tran<sup>1</sup> ([ORCID: 0000-0002-5637-0647](https://orcid.org/0000-0002-5637-0647)) †
- Eric Galiana<sup>2</sup>
- Philippe Thomen<sup>1</sup>
- Céline Cohen<sup>1</sup>
- François Orange<sup>3</sup>
- Fernando Peruani<sup>4</sup>
- Xavier Noblin<sup>1</sup> †

### Affiliations

1. Institut de Physique de Nice (INPHYNI) Université Côte d'Azur, CNRS UMR 7010 Paris France
2. INRAE UMR 1355, CNRS UMR 7254 Université Côte d'Azur Sophia Antipolis France
3. Centre Commun de Microscopie Appliquée (CCMA) Université Côte d'Azur Nice France
4. CNRS UMR 8089 CY Cergy Paris Université Cergy-Pontoise France

† Corresponding author

## Abstract

Phytophthora species cause diseases in a large variety of plants and represent a serious agricultural threat, leading, every year, to multibillion dollar losses. Infection occurs when these biflagellated zoospores move across the soil at their characteristic high speed and reach the roots of a host plant. Despite the relevance of zoospore spreading in the epidemics of plant diseases, characteristics of individual swimming of zoospores have not been fully investigated. It remains unknown about the characteristics of two opposite beating flagella during translation and turning, and the roles of each flagellum on zoospore swimming. Here, combining experiments and modeling, we show how these two flagella contribute to generate thrust when beating together, and identify the mastigonemes-attached anterior flagellum as the main source of thrust. Furthermore, we find that turning involves a complex active process, in which the posterior flagellum temporarily stops, while the anterior flagellum keeps on beating and changes its gait from sinusoidal waves to power and recovery strokes, similar to Chlamydomonas's breaststroke, to reorient its body to a new direction. Our study is a fundamental step towards a better understanding of the spreading of plant pathogens' motile forms, and shows that the motility pattern of these biflagellated zoospores represents a distinct eukaryotic version of the celebrated 'run-and-tumble' motility class exhibited by peritrichous bacteria.
